--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ body {
   transform: scale(1.2);
 }
 .partners__logo:focus {
+  outline: none;
   opacity: 0.7;
 }
 
@@ -262,7 +263,8 @@ body {
   color: rgb(243, 243, 134);
 }
 .contacts:focus {
-  border: 1px solid skyblue;
+  outline: none;
+  opacity: 0.7;
 }
 .contacts:active {
   color: grey;
@@ -309,6 +311,12 @@ body {
   opacity: 0.8;
   transform: rotate(-15deg);
 }
+
+.contacts__btn:focus {
+  outline: none;
+  opacity: 0.7;
+}
+
 .contacts__btn:active {
   opacity: 0.5;
 }
